Fixed bug wrong padding top for intro column of Our Adventures

--- a/b/style.v2.css
+++ b/b/style.v2.css
@@ -73,15 +73,6 @@ h1.our_adv{
 }
 .parallax .desc h1{padding: 0 15px;}
 .parallax .desc p{font-size:1em;padding: 15px;}
-.bcg{
-	position: absolute;
-	left:0;
-	width: 100%;
-	height: 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-	background-size: cover;
-}
 .desktop{	
 	position: absolute;
 	left:0;
@@ -105,6 +96,7 @@ h1.our_adv{
 #sarawak_bg_1{background-image:url(../c/large/www-adventures-sarawak.jpg)}
 #sarawak_bg_2{background-image:url(../c/large/www-adventures-sarawak-2.jpg);background-position: center center;z-index:-2;bottom:0;}
 #others-intro{background-image:url(../c/large/www-adventures-others.jpg);height:80vh !important;text-align:center;}
+#home_bg_1{background-image:url(../c/large/www-base-1.jpg);height:80vh !important;text-align:center;}
 #others-intro *{color:#fff}
 #skrollr-body {float: left;width: 100%;height: 100%;}
 
